--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -7,7 +7,7 @@
 
     
     <h2>Customers</h2>
-    <table border="1" width="100%">
+    <table border="1" width="100%" class="">
        <tr> <th>Customer</th>
         <th>MembershibType Name</th></tr>
         @foreach (var custmer in Model)
