--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -7,13 +7,13 @@
 
     
     <h2>Customers</h2>
-    <table border="1" width="100%" class="">
+    <table border="1" width="100%" class="table">
        <tr> <th>Customer</th>
         <th>MembershibType Name</th></tr>
         @foreach (var custmer in Model)
         {
             <tr>
-                <td>@Html.ActionLink(custmer.name, "Details", new { Id = custmer.Id })</td>
+                <td>@Html.ActionLink(custmer.name, "Edit", new { id = custmer.Id })</td>
                 <td>@custmer.MembershipType.Name</td>
             </tr>
         }
