--- a/Vidly/Views/Shared/_Navbar.cshtml
+++ b/Vidly/Views/Shared/_Navbar.cshtml
@@ -10,7 +10,7 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                <li>@Html.ActionLink("New Rental", "New", "Rentals")</li>
                 <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
                 <li>@Html.ActionLink("Movies", "Index", "Movies")</li>
             </ul>
@@ -18,4 +18,3 @@
         </div>
     </div>
 </div>
-
