--- a/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Views/Customers/CustomerForm.cshtml
@@ -31,3 +31,6 @@
     <button type="submit"class="btn btn-primary">Save</button>
 }
 
+@section scripts{
+    @Scripts.Render("~/bundles/jqueryval")
+}
